# SportMetadata

./: .dockerignore  .env.example  .gitignore  ACCESSIBILITY_IMPROVEMENTS_COMPLETE.md  ANALIZA_APLIKACIJE.md  BUGFIX_USEFFECT_LOOP.md  Dockerfile  FLY-DEPLOY.md  LANGUAGE_TRANSLATION_COMPLETE.md  LOGO_DEBUG_ADDED.md  LOGO_PROBLEM_ANALYSIS.md  LOGO_SERVER_DEBUG.md  NPM_WARNINGS_GUIDE.md  PRIORITET1_IMPLEMENTIRANO.md  PRIORITET1_ZAVRSENO.md  PRIORITET2_ACCESSIBILITY_PARTIAL.md  PRIORITET2_CODE_ORGANIZATION_COMPLETE.md  PRIORITET2_FINAL_STATUS.md  PRIORITET2_STATUS.md  PRIORITET2_TYPESCRIPT_IMPROVEMENTS_COMPLETE.md  README.md  SEARCH_FILTER_IMPLEMENTED.md  SLJEDECE_KORACI.md  STATUS_I_SLJEDECE_KORACI.md  TEAM_LOGO_COMPLETE.md  TEAM_LOGO_FIX.md  TEAM_LOGO_FIX_V2.md  TEAM_LOGO_IMPLEMENTED.md  TESTING_SETUP_COMPLETE.md  TEST_FIXES_APPLIED.md  VULNERABILITIES_FIX_GUIDE.md  WEB-DEPLOYMENT.md  ZOD_INSTALLATION_NOTE.md  fly.toml  index.html  package-lock.json  package.json  package.json.backup  tailwind.config.js  vite.config.ts  (+1 more)
data/: matches.json  players-1767965808884.json  players-1767965827065.json  players-1768039964472.json  players-1768040121664.json  players-1768050060844.json  players-1768050461647.json  sports.json  teams.json
dist-web/: index.html
dist-web/assets/: dialog-Cn6q36UN.js  fs-DccbNoWZ.js  index-BGTx-ZFS.js  index-BWvHMd40.css
server/: auth.cjs  index.cjs  validation.cjs
src/: App.tsx  constants.ts  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: .gitkeep
src-tauri/src/: main.rs
src/hooks/: useMatches.ts  (+4 more)
(+23 files in other folders)
